[project]
name = "claude-image-generation-mcp-server"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "chroma>=0.2.0",
    "dotenv>=0.9.9",
    "groq>=0.37.1",
    "huggingface-hub>=1.8.0",
    "langchain>=1.2.13",
    "langchain-chroma>=1.1.0",
    "langchain-community>=0.4.1",
    "langchain-core>=1.2.23",
    "langchain-groq>=1.1.2",
    "langchain-huggingface>=1.2.1",
    "pypdf>=6.9.2",
    "sentence-transformers>=5.3.0",
]
